...
    }

    final currentQuestion = diaryState.currentQuestion;

    final List<String> periods = diaryState.activePeriods;
    final Map<String, String> periodLabels = {
      'nuit': 'Nuit (00h-05h)',
      'matin': 'Matin (05h-11h)',
      'journee': 'Journée (11h-17h)',
      'soir': 'Soir (17h-00h)',
    };
    final List<int> ratings = [-2, -1, 0, 1, 2];

...
              ),
            ),
            onPressed: () {
              notifier.setComment(period, controller.text);
              Navigator.of(context).pop();
            },
            child: const Text('VALIDER'),
          ),
        ],
      );
    },
  );
}
...
